dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/include/conf.h.in)
AC_REVISION($ Revision 2.0 $)
AC_CONFIG_HEADER(src/include/conf.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_INSTALL

dnl Get host type
AC_CANONICAL_HOST()
dnl check threads library
case $host in
 *freebsd*)
 THREAD_LIBS="-pthread" 
 OS="FreeBSD"
 CC=gcc33
 ;;
 *linux*)
 THREAD_LIBS="-lpthread"
 OS="Linux"
 ;;
 *)
 OS="Windows"
 ;;
esac

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(sys/sock.h sys/ioctl.h sys/uio.h sys/syslog.h assert.h unistd.h netinet/in_systm.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
dnl Checks size
AC_CHECK_SIZEOF(int, 4)

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(setsockopt select socket fopen fclose unlink fgets fflush strncpy)

AC_CHECK_DECLS([SIOCGIFADDR,SIOCGIFFLAGS],,[#include<sys/ioctl.h>])

dnl Substitutions
AC_SUBST(THREAD_LIBS)
AC_SUBST(CC)
AC_SUBST(OS)

AC_OUTPUT([Makefile])
